# PhoTrivia

./: README.md  pyproject.toml
frontend/: .gitignore  README.md  example.env  next.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: fileUpload.tsx  getConversationalAiSignedUrl.tsx  layout.tsx  page.tsx  quizGeneration.tsx  supabaseClient.ts
frontend/app/api/helloNextJs/: route.ts
frontend/app/api/quiz/: route.ts
frontend/app/api/session/: route.ts
frontend/app/experiment/: getConversationalAiSignedUrl.tsx  pageAiHost.tsx  quizGenerationGemini.tsx  quizGenerationOpen.tsx
frontend/app/fileUpload/: fileUpload.tsx  page.tsx
frontend/app/game/: page.tsx  realtimeAgent.tsx
frontend/app/upload/: fileUpload.tsx
frontend/elevenlab_template/: app.js  index.html
python-backend/: .gitignore  image_to_quiz.py  image_to_quiz_open.py  streamlit_quiz.py
